# pancake

./: .gitignore  README.md  REAMDE.md  generate-jni.bat
Bddump/: hakaton_item.sql  hakaton_ivent.sql  hakaton_iventplayer.sql  hakaton_pointowner.sql  hakaton_rentalpoint.sql  hakaton_renthistory.sql  hakaton_routines.sql  hakaton_user.sql
Sugar/: CMakeLists.txt  Sugar.sln  Sugar.vcxproj  Sugar.vcxproj.filters  generate-certificates.bat  server.sln  server.vcxproj  server.vcxproj.filters
Sugar/Assets/: CA.crt  CA.key  CA.srl  Settings.json  generate-certificates.bat
Sugar/CMake/: FindMySQL.cmake
Sugar/Sources/: Handler.cpp  Handler.hpp  PCH.h  Sugar.cpp
Sugar/Sources/MySQL/: MySQL.cpp  MySQL.hpp
Sugar/Sources/Server/: Connection.cpp  Connection.hpp  Listener.cpp  Listener.hpp
Sugar/Sources/Utility/: Log.cpp  Log.hpp  Settings.cpp  Settings.hpp
YANAORental/YANAORental/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
YANAORental/YANAORental.xcodeproj/: project.pbxproj
YANAORental/YANAORental.xcworkspace/: contents.xcworkspacedata
YANAORental/YANAORentalTests/: YANAORentalTests.swift
YANAORental/YANAORentalUITests/: YANAORentalUITests.swift
javaTamik/: asd.txt  log.txt  pom.xml
server-cpp/: connection.cpp  connection.hpp  handler.cpp  handler.hpp  library.cpp  library.hpp  listener.cpp  listener.hpp  log.cpp  log.hpp  main.cpp  server.sln  server.vcxproj  server.vcxproj.filters  settings.cpp  settings.hpp  sugar.cpp  sugar.hpp
server-cpp/https/: connection.cpp  connection.hpp  listener.cpp  listener.hpp
(+50 files in other folders)
